[package]
name = "correlation"
version = "0.1.0"
edition = "2024"
authors = ["Mathieu Roget <mathieu.roget@ens-lyon.org>"]
keywords = ["math", "statistics", "correlation", "pearson", "spearman", "kendall"]
description = "A very simple crate that implements the calculation of correlation coefficients."
license = "MIT"
readme = "README.md"
repository = ""
homepage = ""


[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benches"
harness = false


[dependencies]
